2008-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/CORBA/BigDecimalHelper.java,
	* gnu/CORBA/CDR/LittleEndianInputStream.java,
	* gnu/CORBA/CDR/Vio.java,
	* gnu/CORBA/CDR/gnuRuntime.java,
	* gnu/CORBA/GIOP/MessageHeader.java,
	* gnu/CORBA/GIOP/RequestHeader.java,
	* gnu/CORBA/GIOP/v1_0/ReplyHeader.java,
	* gnu/CORBA/GIOP/v1_0/RequestHeader.java,
	* gnu/CORBA/IOR.java,
	* gnu/CORBA/NamingService/NameParser.java,
	* gnu/CORBA/NamingService/NameTransformer.java,
	* gnu/CORBA/Poa/gnuPOA.java,
	* gnu/CORBA/Poa/gnuServantObject.java:
	Swap use of StringBuffer for CPStringBuilder.

2008-05-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* examples/gnu/classpath/examples/CORBA/SimpleCommunication/communication/DemoServant.java,
	* examples/gnu/classpath/examples/CORBA/SimpleCommunication/communication/DirectTest.java,
	* examples/gnu/classpath/examples/CORBA/swing/x5/IorReader.java,
	* examples/gnu/classpath/examples/CORBA/swing/x5/X5Server.java,
	* examples/gnu/classpath/examples/html/Demo.java:
	Swap use of StringBuffer for StringBuilder.
	
2008-05-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/xml/libxmlj/dom/GnomeAttr.java,
	* gnu/xml/libxmlj/dom/GnomeCharacterData.java,
	* gnu/xml/libxmlj/dom/GnomeDocument.java,
	* gnu/xml/libxmlj/dom/GnomeDocumentType.java,
	* gnu/xml/libxmlj/dom/GnomeElement.java,
	* gnu/xml/libxmlj/dom/GnomeEntity.java,
	* gnu/xml/libxmlj/dom/GnomeNode.java,
	* gnu/xml/libxmlj/dom/GnomeNotation.java,
	* gnu/xml/libxmlj/dom/GnomeProcessingInstruction.java,
	* gnu/xml/libxmlj/dom/GnomeText.java,
	* gnu/xml/libxmlj/dom/GnomeXPathResult.java:
	Swap use of StringBuffer for CPStringBuilder.

2008-04-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/xml/util/XMLWriter.java,
	* gnu/xml/xpath/ArithmeticExpr.java,
	* gnu/xml/xpath/ConcatFunction.java,
	* gnu/xml/xpath/Expr.java,
	* gnu/xml/xpath/FunctionCall.java,