@@ -1,6 +1,17 @@
 2008-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR classpath/21869
+	* gnu/classpath/jdwp/util/Signature.java,
+	* gnu/java/awt/font/opentype/GlyphNamer.java,
+	* gnu/java/awt/font/opentype/truetype/Fixed.java,
+	* gnu/java/awt/font/opentype/truetype/VirtualMachine.java,
+	* gnu/java/awt/peer/gtk/GdkFontPeer.java,
+	* gnu/java/awt/peer/gtk/GtkClipboard.java:
+	Swap use of StringBuffer for CPStringBuilder.
+
+2008-05-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/21869
 	* gnu/CORBA/BigDecimalHelper.java,
 	* gnu/CORBA/CDR/LittleEndianInputStream.java,
 	* gnu/CORBA/CDR/Vio.java,
